# quokkatest

./: .clang-format  CMakeLists.txt  main.cpp
docs/: assertions.puml  (+1 more)
testing/: CMakeLists.txt
testing/include/interface/: ITest.hpp  ITestResult.hpp  ITestingPrinter.hpp
testing/include/quokka/assertions/: Assertions.hpp
testing/include/quokka/assertions/bool/: BoolAssertion.hpp
testing/include/quokka/assertions/double/: DoubleAssertion.hpp  IDoubleAssetrion.hpp  NotDoubleAssertion.hpp
testing/include/quokka/assertions/float/: FloatAssertion.hpp  IFloatAssertion.hpp  NotFloatAssertion.hpp
testing/include/quokka/assertions/function/: FunctionAssertion.hpp  IFunctionAssertion.hpp  NotFunctionAssertion.hpp
testing/include/quokka/assertions/int/: IIntAssertion.hpp  IntAssertion.hpp  NotIntAssertion.hpp
testing/include/quokka/interface/: ITest.hpp  ITestResult.hpp  ITestingPrinter.hpp  ITestsSummary.hpp
testing/include/quokka/testing/: AssertionException.hpp  ColouredTestingPrinter.hpp  Test.hpp  TestResult.hpp  TestRunner.hpp  TestSet.hpp  TestingPrinter.hpp  TestsSummary.hpp
testing/include/quokka/utils/: Utils.hpp
testing/include/testing/: Test.hpp  TestResult.hpp  TestRunner.hpp  TestSet.hpp  TestingPrinter.hpp  TestsSummary.hpp
testing/src/: Test.cpp  TestResult.cpp  TestRunner.cpp  TestSet.cpp  TestingPrinter.cpp  TestsSummary.cpp
testing/src/assertions/: Assertions.cpp
testing/src/assertions/bool/: BoolAssertion.cpp
testing/src/assertions/double/: DoubleAssertion.cpp  NotDoubleAssertion.cpp
testing/src/assertions/float/: FloatAssertion.cpp  NotFloatAssertion.cpp
testing/src/assertions/function/: FunctionAssertion.cpp  IFunctionAssertion.cpp  NotFunctionAssertion.cpp
testing/src/assertions/int/: IntAssertion.cpp  NotIntAssertion.cpp
testing/src/assertions/string/: IStringAssertion.cpp  NotStringAssertion.cpp  StringAssertion.cpp
testing/src/testing/: AssertionException.cpp  ColouredTestingPrinter.cpp  Test.cpp  TestResult.cpp  TestRunner.cpp  TestSet.cpp  TestingPrinter.cpp  TestsSummary.cpp
testing/src/utils/: Utils.cpp
(+28 files in other folders)
